buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
        classpath files("gradle/plugins/mixingradle-0.7-FG5BUILD.jar")
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'org.parchmentmc.librarian.forgegradle'

version = '1.18.2-1.4'
group = 'me.haydenb.assemblylinemachines' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'assemblylinemachines'

// Mojang ships Java 16 to end users in 1.17+ instead of Java 8 in 1.16 or lower, so your mod should target Java 16.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {

	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    mappings channel: 'parchment', version: '1.18.1-2022.03.06-1.18.2'
    
    runs {
        client {
            workingDirectory project.file('run')
            
            //Forge-required properties (2)
            property 'forge.logging.console.level', 'debug'
        	property 'forge.logging.markers', 'REGISTRIES'
        	//Mixin-required properties and arg (3)
        	property 'mixin.env.remapRefMap', 'true'
        	property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg')
        	arg '-mixin.config=mixins.assemblylinemachines.json'
            
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            
            //Forge-required properties (2)
            property 'forge.logging.console.level', 'debug'
        	property 'forge.logging.markers', 'REGISTRIES'
        	//Mixin-required properties and arg (3)
        	property 'mixin.env.remapRefMap', 'true'
        	property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg')
        	arg '-mixin.config=mixins.assemblylinemachines.json'
        	
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            
            //Forge-required properties (2)
            property 'forge.logging.console.level', 'debug'
        	property 'forge.logging.markers', 'REGISTRIES'
        	//Mixin-required properties and arg (3)
        	property 'mixin.env.remapRefMap', 'true'
        	property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg')
        	arg '-mixin.config=mixins.assemblylinemachines.json'
        	//Datagen-required args (4)
            args '--mod', 'assemblylinemachines', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/'), '--input', file('src/main/resources/')
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets {
  main {
    resources {
      srcDirs += "src/generated/resources"
    }
  }
}

repositories{
    maven {
        name = "JEI"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven{
    	name = "Patchouli"
    	url = "https://maven.blamejared.com"
    }
	maven {
		name = "Cursemaven"
        url = "https://cursemaven.com"
    }
    maven{
    	name = "Spongepowered"
    	url = "https://repo.spongepowered.org/maven"
    }
}

jar.finalizedBy('reobfJar')

jar{
	manifest{
		attributes([
			"MixinConfigs": "mixins.assemblylinemachines.json"
		])
	}
}

dependencies {
  	minecraft 'net.minecraftforge:forge:1.18.2-40.0.40'

	//Compatibilities - 'implementation' because it needs to be during runtime and compilation.
 	implementation fg.deobf("mezz.jei:jei-1.18.2:9.4.1.116")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.18.2-66-SNAPSHOT")
    implementation fg.deobf("curse.maven:theoneprobe-245211:3671753")
    
    //Runtime - for testing purposes to make sure certain mechanics work.
    runtimeOnly fg.deobf("curse.maven:ato-405593:3711468")
    
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

//Mixin workaround stuff.
mixin {
    
	add sourceSets.main, 'mixins.assemblylinemachines.refmap.json'
	
}

task eclipseWithMap(type: GradleBuild){
    
	tasks = ['createMcpToSrg', 'eclipse', 'genEclipseRuns']
}